--- a/index.html
+++ b/index.html
@@ -1,309 +1,17 @@
-<!doctype html>
-<html lang="vi">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Click To Add Flowers</title>
-  <style>
-    :root{
-      --bg:#000;
-      --glow: rgba(255,240,180,0.06);
-    }
-    html,body{
-      height:100%;
-      margin:0;
-      background:var(--bg);
-      color:#fff;
-      font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      overflow:hidden;
-    }
-
-    .container{
-      position:relative;
-      width:100%;
-      height:100%;
-    }
-
-    canvas{
-      display:block;
-      width:100%;
-      height:100%;
-    }
-
-    .clean-btn{
-      position: absolute;
-      left:18px;
-      top:18px;
-      padding:8px 12px;
-      background: rgba(255,255,255,0.06);
-      border-radius: 999px;
-      backdrop-filter: blur(4px);
-      cursor:pointer;
-      user-select:none;
-      color:#fff;
-      font-weight:600;
-      font-size:14px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.6), 0 0 18px rgba(255,255,255,0.02) inset;
-    }
-
-    .name{
-      position:absolute;
-      left:50%;
-      transform:translateX(-50%);
-      bottom:24px;
-      color: rgba(255,255,255,0.84);
-      font-weight:700;
-      font-size:18px;
-      pointer-events:none;
-      text-shadow: 0 6px 30px rgba(0,0,0,0.7);
-    }
-
-    /* small hint lights at bottom-left like in image */
-    .dots{
-      position:absolute;
-      left:18px;
-      bottom:18px;
-      display:flex;
-      gap:8px;
-      pointer-events:none;
-    }
-    .dot{
-      width:12px;height:12px;border-radius:50%;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-    }
-    .dot.red{ background:#ff6b6b; }
-    .dot.yellow{ background:#ffd66b; }
-    .dot.green{ background:#6bffb3; }
-
-    /* small credit */
-    .credit{
-      position:absolute;
-      right:12px;
-      bottom:8px;
-      font-size:12px;
-      color:rgba(255,255,255,0.5);
-      pointer-events:none;
-    }
-  </style>
-</head>
 <body>
-  <div class="container">
-    <canvas id="canvas"></canvas>
-    <div class="clean-btn" id="cleanBtn">Clean</div>
-    <div class="dots" aria-hidden="true">
-      <div class="dot red"></div>
-      <div class="dot yellow"></div>
-      <div class="dot green"></div>
+    <div class="container">
+        <canvas id="canvas"></canvas>
+        <div class="clean-btn">Clean</div>
     </div>
+
     <div class="name">Click To Add Flowers</div>
-    <div class="credit">Made with ❤️</div>
-  </div>
+    <audio id="bg-music" autoplay loop>
+        <source src="./style/KhuRungDomDom.mp3" type="audio/mpeg">
+    </audio>
 
-  <!-- Optional: replace src with your mp3 to have background music -->
-  <audio id="bg-music" autoplay loop>
-    <source src="" type="audio/mpeg">
-  </audio>
-
-  <script type="module">
-  // Flowers on canvas — single-file demo
-  const canvas = document.getElementById('canvas');
-  const ctx = canvas.getContext('2d', { alpha: true });
-
-  function fitCanvas() {
-    const dpr = window.devicePixelRatio || 1;
-    canvas.width = Math.floor(canvas.clientWidth * dpr);
-    canvas.height = Math.floor(canvas.clientHeight * dpr);
-    ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
-  }
-  fitCanvas();
-  window.addEventListener('resize', fitCanvas);
-
-  // Utility
-  function rand(min, max){ return Math.random()*(max-min)+min; }
-  function lerp(a,b,t){ return a + (b-a)*t; }
-
-  // Fireflies
-  const fireflies = [];
-  for(let i=0;i<40;i++){
-    fireflies.push({
-      x: rand(0,1),
-      y: rand(0,0.6),
-      size: rand(0.6,2.6),
-      speedX: rand(-0.0005,0.0005),
-      speedY: rand(-0.0003,0.0003),
-      phase: rand(0,Math.PI*2),
-      hue: rand(40,80)
-    });
-  }
-
-  // Flower class
-  class Flower {
-    constructor(x, y){
-      this.x = x;
-      this.y = y;
-      this.scale = rand(0.7, 1.6);
-      this.stemLen = rand(80, 160)*this.scale;
-      this.stemW = rand(1,3);
-      this.petalCount = Math.floor(rand(4,8));
-      this.petalRadius = rand(10,36)*this.scale;
-      this.hue = rand(260,320); // base hue (pink/purple)
-      // slight color variations
-      this.saturation = rand(60,95);
-      this.brightness = rand(55,85);
-      this.grow = 0; // animation 0..1
-      this.growSpeed = rand(0.01,0.04);
-      this.wobble = rand(0.2,0.9);
-      this.vx = rand(-0.1,0.1);
-      this.life = 1; // for potential fade
-    }
-
-    update(dt){
-      this.grow = Math.min(1, this.grow + this.growSpeed * dt);
-      this.x += this.vx * 0.01 * dt;
-    }
-
-    draw(ctx){
-      ctx.save();
-      // stem
-      ctx.translate(this.x, this.y);
-      // draw curved stem via quadratic
-      ctx.beginPath();
-      const stemTopX = 0 + Math.sin(this.x * 5 + Date.now()*0.0006)*6*this.wobble;
-      ctx.moveTo(0,0);
-      ctx.quadraticCurveTo(lerp(0, stemTopX, 0.5), -this.stemLen*0.5, stemTopX, -this.stemLen);
-      ctx.strokeStyle = `rgba(100,220,140,0.95)`;
-      ctx.lineWidth = this.stemW;
-      ctx.lineCap = 'round';
-      ctx.stroke();
-
-      // petals (glowy)
-      const t = this.grow;
-      ctx.translate(stemTopX, -this.stemLen);
-      for(let i=0;i<this.petalCount;i++){
-        const ang = (i / this.petalCount) * Math.PI*2 + Math.sin(Date.now()*0.001 + i)*0.08;
-        const px = Math.cos(ang) * this.petalRadius * (0.6 + 0.4*t);
-        const py = Math.sin(ang) * this.petalRadius * (0.6 + 0.4*t);
-        // radial gradient for petal
-        const g = ctx.createRadialGradient(px, py, 1, px, py, this.petalRadius*1.1);
-        // inner bright yellow, outer pink/purple
-        g.addColorStop(0, `hsla(${lerp(50, 60, Math.random())}, 100%, 65%, ${0.95 * t})`);
-        g.addColorStop(0.35, `hsla(${this.hue-40}, ${this.saturation}%, ${this.brightness-5}%, ${0.55 * t})`);
-        g.addColorStop(1, `hsla(${this.hue}, ${this.saturation}%, ${this.brightness}%, ${0.06 * t})`);
-        ctx.beginPath();
-        ctx.ellipse(px, py, this.petalRadius * (0.9 - 0.2*Math.abs(Math.sin(i))), this.petalRadius*0.6, ang, 0, Math.PI*2);
-        ctx.fillStyle = g;
-        ctx.fill();
-      }
-
-      // center glow
-      const cg = ctx.createRadialGradient(0,0,2,0,0,this.petalRadius*0.6);
-      cg.addColorStop(0, `rgba(255,240,170,${0.95*t})`);
-      cg.addColorStop(0.4, `rgba(255,220,170,${0.45*t})`);
-      cg.addColorStop(1, `rgba(255,200,200,${0.06*t})`);
-      ctx.beginPath();
-      ctx.arc(0,0, this.petalRadius*0.35, 0, Math.PI*2);
-      ctx.fillStyle = cg;
-      ctx.fill();
-
-      ctx.restore();
-    }
-  }
-
-  const flowers = [];
-
-  // click to add flower
-  function addFlowerAt(clientX, clientY){
-    const rect = canvas.getBoundingClientRect();
-    const x = clientX - rect.left;
-    const y = clientY - rect.top;
-    flowers.push(new Flower(x, y));
-  }
-
-  canvas.addEventListener('pointerdown', (e) => {
-    // add one or multiple flowers slightly offset
-    for(let i=0;i<1;i++){
-      const jitterX = rand(-18,18);
-      const jitterY = rand(-8,8);
-      addFlowerAt(e.clientX + jitterX, e.clientY + jitterY);
-    }
-  });
-
-  // also allow click-and-drag to draw many
-  let isDown = false;
-  canvas.addEventListener('pointerdown', ()=> isDown = true);
-  window.addEventListener('pointerup', ()=> isDown = false);
-  canvas.addEventListener('pointermove', (e)=>{
-    if(isDown){
-      if(Math.random() < 0.25) addFlowerAt(e.clientX + rand(-12,12), e.clientY + rand(-8,8));
-    }
-  });
-
-  document.getElementById('cleanBtn').addEventListener('click', ()=> {
-    flowers.length = 0;
-  });
-
-  // main loop
-  let last = performance.now();
-  function frame(now){
-    const dt = Math.min(60, now - last) / 16.67; // normalized delta (rough)
-    last = now;
-
-    // clear with subtle darkness (preserve glow trails slightly)
-    ctx.fillStyle = 'rgba(0,0,0,0.2)';
-    ctx.fillRect(0,0,canvas.clientWidth, canvas.clientHeight);
-
-    // draw faint ambient particles to mimic image starfield
-    for(let i=0;i<fireflies.length;i++){
-      const f = fireflies[i];
-      // movement
-      f.phase += 0.002 * dt * (0.8 + (i%3)*0.4);
-      f.x += f.speedX * dt;
-      f.y += f.speedY * dt;
-      if(f.x < -0.05) f.x = 1.05;
-      if(f.x > 1.05) f.x = -0.05;
-      if(f.y < -0.05) f.y = 0.95;
-      if(f.y > 1.05) f.y = -0.05;
-
-      const px = f.x * canvas.clientWidth;
-      const py = f.y * canvas.clientHeight;
-      const r = f.size * (1 + Math.sin(f.phase*2)*0.6);
-      // glow
-      const g = ctx.createRadialGradient(px,py,0,px,py,r*6);
-      g.addColorStop(0, `hsla(${f.hue}, 90%, 65%, 0.95)`);
-      g.addColorStop(0.15, `hsla(${f.hue}, 85%, 60%, 0.25)`);
-      g.addColorStop(1, `rgba(0,0,0,0)`);
-      ctx.beginPath();
-      ctx.fillStyle = g;
-      ctx.arc(px,py,r*1.2,0,Math.PI*2);
-      ctx.fill();
-    }
-
-    // update and draw flowers
-    for(let i=0;i<flowers.length;i++){
-      const fl = flowers[i];
-      fl.update(dt);
-      fl.draw(ctx);
-    }
-
-    requestAnimationFrame(frame);
-  }
-  requestAnimationFrame(frame);
-
-  // nice: spawn a few initial flowers near top for demo
-  function spawnInitial(){
-    const w = canvas.clientWidth, h = canvas.clientHeight;
-    for(let i=0;i<8;i++){
-      const x = rand(w*0.06, w*0.94);
-      const y = rand(h*0.45, h*0.9);
-      flowers.push(new Flower(x,y));
-    }
-  }
-  spawnInitial();
-
-  // keep full redraw on resize, ensure canvas client sizes match
-  // (we already handle fitCanvas)
-  </script>
+    <script type="x-shader/x-fragment" id="fragmentShader"></script>
+    <script type="x-shader/x-vertex" id="vertexShader"></script>
+    <script type="module" src="./style/module.js"></script>
+    <script src="./style/script.js"></script>
 </body>
 </html>
