--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Bấm Vào Màn Để Ra Hoa</title>
+  <title>Bấm Vào Màn Hình</title>
   <style>
     :root{
       --bg:#000;
@@ -97,7 +97,7 @@
       <div class="dot yellow"></div>
       <div class="dot green"></div>
     </div>
-    <div class="name">Bấm Vào Màn Để Ra Hoa</div>
+    <div class="name">Bấm Vào Màn Hình</div>
     <div class="credit">Made with Jerry❤️</div>
   </div>
 
