--- a/index.html
+++ b/index.html
@@ -1,270 +1,179 @@
-<!DOCTYPE html><html lang="vi">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vườn Hoa Tặng Người Yêu</title>
-  <style>
-    /* ====== Reset + nền ====== */
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      color: #2a2a2a;
-      background: radial-gradient(1200px 600px at 80% -10%, #ffe4f1 0%, #ffeef7 35%, #fff 60%),
-                  linear-gradient(180deg, #e0f7ff 0%, #f9fbff 40%, #fff 100%);
-      overflow: hidden;
-    }/* ====== Thanh tiêu đề ====== */
-.topbar {
-  position: fixed; inset: 16px 16px auto 16px;
-  display: flex; align-items: center; gap: 12px; z-index: 30;
-  background: rgba(255,255,255,.75);
-  backdrop-filter: blur(8px);
-  border: 1px solid rgba(0,0,0,.06);
-  border-radius: 18px; padding: 10px 14px;
-  box-shadow: 0 4px 18px rgba(0,0,0,.08);
-}
-.title {
-  font-weight: 700; letter-spacing: .3px;
-  background: linear-gradient(90deg,#ff5aa4,#ff8a5b,#ffcc66);
-  -webkit-background-clip: text; background-clip: text; color: transparent;
-  font-size: 16px;
-  white-space: nowrap;
-}
-.spacer { flex: 1; }
-
-.controls { display: flex; gap: 8px; flex-wrap: wrap; }
-button, input[type="text"] {
-  appearance: none; border: none; outline: none;
-  background: #111; color: #fff; padding: 9px 12px; border-radius: 12px;
-  font-weight: 600; cursor: pointer; transition: transform .08s ease, opacity .2s ease, box-shadow .2s;
-}
-button:active { transform: translateY(1px) scale(.99); }
-.light { background: #fff; color: #333; border: 1px solid rgba(0,0,0,.08); }
-.ghost { background: rgba(255,255,255,.6); color: #333; border: 1px solid rgba(0,0,0,.06); }
-.danger { background: #ff4d6d; }
-.success { background: #19c37d; }
-
-input[type="text"] { min-width: 220px; font-weight: 700; }
-
-/* ====== Sân vườn (khung vẽ) ====== */
-#wrap {
-  position: absolute; inset: 0; display: grid; place-items: center;
-  padding-top: 58px; /* chừa chỗ cho topbar */
-}
-.card {
-  position: relative; width: min(1100px, 96vw); height: min(640px, 74vh);
-  background: linear-gradient(180deg,#fdfcff, #ffffffcc 45%, #fff8 70%), #ffffff;
-  border-radius: 28px; border: 1px solid rgba(0,0,0,.06);
-  overflow: hidden; box-shadow: 0 18px 60px rgba(0,0,0,.12);
-}
-
-/* Bầu trời/ánh nắng */
-.sun { position: absolute; width: 120px; height: 120px; border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, #fff6b3, #ffd166, #ffb703);
-  right: 36px; top: 28px; filter: blur(.3px) drop-shadow(0 0 40px #ffd166aa);
-  animation: glow 6s ease-in-out infinite alternate; z-index: 1;
-}
-@keyframes glow { from { transform: scale(1); } to { transform: scale(1.05) } }
-
-/* Tim bay nền */
-.heart { position: absolute; width: 14px; height: 14px; transform: rotate(45deg);
-  background: #ff6b9a88; left: 50%; top: 100%; margin-left: -7px; border-radius: 2px;
-  box-shadow: -8px 0 0 0 #ff6b9a88, 0 -8px 0 0 #ff6b9a88;
-  animation: floatUp var(--dur, 14s) linear infinite; z-index: 0;
-}
-@keyframes floatUp {
-  0% { transform: translate(var(--x,0), 0) rotate(45deg) scale(.8); opacity: 0; }
-  10% { opacity: .7; }
-  100% { transform: translate(var(--x,0), -120vh) rotate(45deg) scale(1.2); opacity: 0; }
-}
-
-/* Khu vườn SVG */
-svg#garden { position: absolute; inset: 0; width: 100%; height: 100%; z-index: 2; }
-
-/* Đất cỏ phía dưới */
-.ground {
-  position: absolute; left: -5%; bottom: -2%; width: 110%; height: 35%; z-index: 1;
-  background: radial-gradient(120% 100% at 50% 10%, #d8fbd3 0%, #a4f3a5 30%, #86d07a 55%, #6ab26e 100%);
-  border-top-left-radius: 40% 40%; border-top-right-radius: 40% 40%;
-  box-shadow: inset 0 8px 24px rgba(0,0,0,.06);
-}
-
-/* Lời chúc */
-.message {
-  position: absolute; left: 50%; top: 64px; transform: translateX(-50%);
-  background: rgba(255,255,255,.78); border: 1px solid rgba(0,0,0,.06);
-  padding: 10px 16px; border-radius: 16px; z-index: 3;
-  font-weight: 800; letter-spacing: .4px; text-align: center;
-  box-shadow: 0 8px 24px rgba(0,0,0,.08);
-}
-.message .to { font-size: 14px; opacity: .75; }
-.message .line { font-size: clamp(18px, 3.2vw, 28px); }
-
-/* Tooltip click */
-.tip { position: absolute; bottom: 18px; left: 50%; transform: translateX(-50%);
-  background: rgba(255,255,255,.9); border: 1px solid rgba(0,0,0,.06);
-  padding: 6px 10px; border-radius: 999px; font-size: 13px; z-index: 3;
-  box-shadow: 0 6px 18px rgba(0,0,0,.08);
-  animation: bob 2.6s ease-in-out infinite;
-}
-@keyframes bob { 0%,100%{ transform: translate(-50%, 0);} 50%{ transform: translate(-50%, -6px);} }
-
-/* Hiệu ứng nở hoa */
-.bloom-in { animation: bloom .6s ease-out forwards; transform-origin: center; }
-@keyframes bloom { from { transform: scale(0); opacity: 0 } to { transform: scale(1); opacity: 1 } }
-.sway { animation: sway 6s ease-in-out infinite; transform-origin: bottom center; }
-@keyframes sway { 0% { transform: rotate(-1deg) } 50% { transform: rotate(1.8deg) } 100% { transform: rotate(-1deg) } }
-
-/* Responsive tinh chỉnh */
-@media (max-width: 520px) {
-  .title { display: none; }
-  input[type="text"] { min-width: 160px; }
-  .message { top: 52px; }
-  .card { height: min(70vh, 560px); }
-}
-
-  </style>
+<meta charset="UTF-8">
+<title>Phao Hoa</title>
+<style>
+  body {
+    margin: 0;
+    background: black;
+    overflow: hidden;
+  }
+  canvas {
+    display: block;
+  }
+</style>
 </head>
 <body>
-  <!-- Thanh trên cùng -->
-  <div class="topbar">
-    <div class="title">🌸 Vườn Hoa Tặng Người Yêu</div>
-    <div class="spacer"></div>
-    <div class="controls">
-      <input id="nameInput" class="light" type="text" placeholder="Tên người thương..." />
-      <button id="changeMsg" class="ghost">Đổi lời chúc</button>
-      <button id="randomize" class="success">Rải hoa</button>
-      <button id="clear" class="danger">Xoá vườn</button>
-    </div>
-  </div>  <div id="wrap">
-    <div class="card" id="card">
-      <div class="sun"></div>
-      <div class="message" id="message">
-        <div class="to">Gửi <span id="lover">Em</span> ❤</div>
-        <div class="line" id="line">Chúc em mỗi ngày đều nở rộ như những bông hoa này.</div>
-      </div>
-      <svg id="garden" viewBox="0 0 1000 580" preserveAspectRatio="xMidYMid slice" aria-label="Khu vườn hoa có thể bấm để trồng thêm">
-        <!-- hoa sẽ được thêm bằng JS -->
-      </svg>
-      <div class="ground"></div>
-      <div class="tip">Chạm / Click trong vườn để trồng thêm hoa 🌷</div>
-    </div>
-  </div>  <script>
-    // ====== Tiện ích màu sắc/pseudo-random ======
-    const PALETTES = [
-      ['#ff4d6d','#ff8fa3','#ffc2d1','#ffe5ec'],
-      ['#ff7f50','#ffa987','#ffd8b1','#fff3e0'],
-      ['#6a5acd','#8d79ff','#c7bfff','#efeaff'],
-      ['#00b4d8','#48cae4','#90e0ef','#caf0f8'],
-      ['#2ecc71','#7ee093','#b8f2c8','#e8ffec'],
-      ['#f72585','#b5179e','#7209b7','#560bad']
-    ];
-    const rand = (min, max) => Math.random() * (max - min) + min;
-    const pick = arr => arr[Math.floor(Math.random()*arr.length)];
+<canvas id="fireworks"></canvas>
 
-    // ====== SVG helper ======
-    const svgNS = 'http://www.w3.org/2000/svg';
-    const $garden = document.getElementById('garden');
+<script>
+const canvas = document.getElementById('fireworks');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-    function svgEl(tag, attrs={}){
-      const el = document.createElementNS(svgNS, tag);
-      for (const k in attrs) el.setAttribute(k, attrs[k]);
-      return el;
+let fireworks = [];
+const boomSounds = [
+  new Audio("boom1.mp3"),
+  new Audio("boom2.mp3"),
+  new Audio("boom3.mp3")
+];
+
+function randColor() {
+  return `hsl(${Math.random() * 360},100%,50%)`;
+}
+
+function playBoomSound() {
+  let sound = boomSounds[Math.floor(Math.random() * boomSounds.length)];
+  sound.currentTime = 0;
+  sound.play();
+}
+
+function Firework(x, y, text, type) {
+  this.x = x;
+  this.y = canvas.height;
+  this.tx = x;
+  this.ty = y;
+  this.color = randColor();
+  this.text = text;
+  this.speed = 6;
+  this.exploded = false;
+  this.particles = [];
+  this.type = type;
+}
+
+Firework.prototype.update = function() {
+  if (!this.exploded) {
+    let dx = this.tx - this.x;
+    let dy = this.ty - this.y;
+    this.x += dx * 0.1;
+    this.y += dy * 0.1;
+
+    if (Math.abs(dx) < 2 && Math.abs(dy) < 2) {
+      this.explode();
     }
+  } else {
+    this.particles.forEach((p, i) => {
+      p.update();
+      if (p.alpha <= 0) this.particles.splice(i, 1);
+    });
+  }
+};
 
-    // ====== Vẽ một bông hoa ngẫu nhiên ======
-    function makeFlower(x, y, opts={}){
-      const g = svgEl('g', { class: 'bloom-in sway' });
-      const palette = pick(PALETTES);
-      const petals = Math.floor(rand(5, 10));
-      const size = opts.size ?? rand(12, 24);
+Firework.prototype.draw = function() {
+  if (!this.exploded) {
+    ctx.beginPath();
+    ctx.arc(this.x, this.y, 3, 0, Math.PI * 2);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+  } else {
+    this.particles.forEach(p => p.draw());
+    ctx.fillStyle = this.color;
+    ctx.font = "30px Arial";
+    ctx.textAlign = "center";
+    ctx.fillText(this.text, this.tx, this.ty);
+  }
+};
 
-      // Thân và lá
-      const stemH = rand(60, 130);
-      const stem = svgEl('path', {
-        d: `M ${x} ${y} C ${x-6} ${y-stemH*0.4}, ${x+6} ${y-stemH*0.8}, ${x} ${y-stemH}`,
-        stroke: '#2f9e44', 'stroke-width': 3, fill: 'none', 'stroke-linecap': 'round'
-      });
-      const leaf = svgEl('path', {
-        d: `M ${x-8} ${y-stemH*0.6} q 18 -10 28 6 q -18 10 -28 -6 z`,
-        fill: '#7bc96f', opacity: .9
-      });
-      g.append(stem, leaf);
+Firework.prototype.explode = function() {
+  this.exploded = true;
+  playBoomSound(); // phát âm thanh khi nổ
+  let particleCount = 80;
 
-      // Nhị hoa
-      const center = svgEl('circle', { cx: x, cy: y-stemH, r: size*0.4, fill: pick(['#ffd166','#ffe66d','#ffcc00']) });
-
-      // Cánh hoa
-      for (let i=0;i<petals;i++){
-        const angle = (i/petals) * Math.PI*2;
-        const px = x + Math.cos(angle) * size;
-        const py = (y-stemH) + Math.sin(angle) * size * 0.8;
-        const petal = svgEl('ellipse', { cx: px, cy: py, rx: size*0.55, ry: size*0.95, fill: pick(palette), opacity: 0.92 });
-        petal.setAttribute('transform', `rotate(${(angle*180/Math.PI)+rand(-6,6)} ${px} ${py})`);
-        g.appendChild(petal);
-      }
-
-      // Viền nhẹ
-      const ring = svgEl('circle', { cx:x, cy:y-stemH, r: size*1.05, fill: 'none', stroke: '#00000014', 'stroke-dasharray': '2 6' });
-
-      g.append(center, ring);
-      return g;
+  if (this.type === "circle") {
+    for (let i = 0; i < particleCount; i++) {
+      let angle = (Math.PI * 2 / particleCount) * i;
+      let speed = Math.random() * 3 + 2;
+      this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
     }
-
-    // ====== Rải tim bay nền cho xịn sò ======
-    function spawnHearts(){
-      const card = document.getElementById('card');
-      for(let i=0;i<18;i++){
-        const h = document.createElement('div');
-        h.className = 'heart';
-        h.style.setProperty('--x', `${(Math.random()*2-1)*40}vw`);
-        h.style.left = `${rand(8, 92)}%`;
-        h.style.animationDelay = `${rand(-14, 0)}s`;
-        h.style.setProperty('--dur', `${rand(10, 18)}s`);
-        card.appendChild(h);
-      }
+  } else if (this.type === "heart") {
+    for (let i = 0; i < particleCount; i++) {
+      let t = i / particleCount * Math.PI * 2;
+      let x = 16 * Math.sin(t) ** 3;
+      let y = -(13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t));
+      let angle = Math.atan2(y, x);
+      let speed = 2.5;
+      this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
     }
-
-    // ====== Thêm nhiều hoa ngẫu nhiên ======
-    function sprinkle(n=24){
-      for(let i=0;i<n;i++){
-        const x = rand(80, 920);
-        const y = rand(360, 560);
-        $garden.appendChild(makeFlower(x,y));
+  } else if (this.type === "flower") {
+    for (let i = 0; i < particleCount; i++) {
+      let angle = (Math.PI * 2 / particleCount) * i;
+      let speed = (i % 2 === 0) ? 3 : 1.5;
+      this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
+    }
+  } else if (this.type === "double") {
+    for (let ring = 1; ring <= 2; ring++) {
+      for (let i = 0; i < particleCount / 2; i++) {
+        let angle = (Math.PI * 2 / (particleCount / 2)) * i;
+        let speed = ring * 2;
+        this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
       }
     }
+  }
+};
 
-    // ====== Interaction: click để trồng ======
-    $garden.addEventListener('pointerdown', (e)=>{
-      const rect = $garden.getBoundingClientRect();
-      const x = (e.clientX - rect.left) / rect.width * 1000;
-      const y = (e.clientY - rect.top) / rect.height * 580;
-      $garden.appendChild(makeFlower(x,y,{ size: rand(16, 28) }));
-    });
+function Particle(x, y, angle, speed, color) {
+  this.x = x;
+  this.y = y;
+  this.vx = Math.cos(angle) * speed;
+  this.vy = Math.sin(angle) * speed;
+  this.alpha = 1;
+  this.color = color;
+}
 
-    // ====== Nút điều khiển ======
-    document.getElementById('randomize').addEventListener('click', ()=> sprinkle(30));
-    document.getElementById('clear').addEventListener('click', ()=>{ $garden.innerHTML=''; });
-    document.getElementById('nameInput').addEventListener('input', (e)=>{
-      document.getElementById('lover').textContent = e.target.value || 'Em';
-    });
-    document.getElementById('changeMsg').addEventListener('click', ()=>{
-      const lines = [
-        'Chúc em mỗi ngày đều nở rộ như những bông hoa này.',
-        'Cả khu vườn này là để nói: Anh yêu em. 💗',
-        'Mong em luôn bình an, rạng rỡ và hạnh phúc.',
-        'Bên em, trái tim anh luôn là mùa xuân.',
-        'Mỗi bông hoa là một lý do để thương em hơn.'
-      ];
-      const cur = document.getElementById('line').textContent.trim();
-      let next = pick(lines);
-      while(next === cur) next = pick(lines);
-      document.getElementById('line').textContent = next;
-    });
+Particle.prototype.update = function() {
+  this.x += this.vx;
+  this.y += this.vy;
+  this.vx *= 0.98;
+  this.vy *= 0.98;
+  this.vy += 0.02;
+  this.alpha -= 0.01;
+};
 
-    // ====== Khởi tạo ======
-    spawnHearts();
-    sprinkle(26);
-  </script></body>
+Particle.prototype.draw = function() {
+  ctx.globalAlpha = this.alpha;
+  ctx.beginPath();
+  ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
+  ctx.fillStyle = this.color;
+  ctx.fill();
+  ctx.globalAlpha = 1;
+};
+
+function animate() {
+  ctx.fillStyle = "rgba(0,0,0,0.2)";
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+  fireworks.forEach((fw, i) => {
+    fw.update();
+    fw.draw();
+    if (fw.exploded && fw.particles.length === 0) {
+      fireworks.splice(i, 1);
+    }
+  });
+
+  requestAnimationFrame(animate);
+}
+
+setInterval(() => {
+  let x = Math.random() * canvas.width;
+  let y = Math.random() * (canvas.height / 2);
+  let types = ["circle", "heart", "flower", "double"];
+  let type = types[Math.floor(Math.random() * types.length)];
+  fireworks.push(new Firework(x, y, "❤️ Yêu Em ❤️", type));
+}, 800);
+
+animate();
+</script>
+</body>
 </html>
