--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Phao Hoa</title>
+<title>Pháo hoa nghệ thuật</title>
 <style>
   body {
     margin: 0;
@@ -24,43 +24,42 @@ canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
 let fireworks = [];
-const boomSounds = [
-  new Audio("boom1.mp3"),
-  new Audio("boom2.mp3"),
-  new Audio("boom3.mp3")
-];
+const texts = ["❤️ Yêu Em ❤️", "💖", "I Love You", "Happy Birthday", "🎆", "💞", "🌸"];
 
 function randColor() {
   return `hsl(${Math.random() * 360},100%,50%)`;
 }
 
-function playBoomSound() {
-  let sound = boomSounds[Math.floor(Math.random() * boomSounds.length)];
-  sound.currentTime = 0;
-  sound.play();
-}
-
-function Firework(x, y, text, type) {
-  this.x = x;
-  this.y = canvas.height;
-  this.tx = x;
-  this.ty = y;
+function Firework(sx, sy, tx, ty, text, type) {
+  this.x = sx;
+  this.y = sy;
+  this.tx = tx;
+  this.ty = ty;
   this.color = randColor();
   this.text = text;
-  this.speed = 6;
+  this.type = type;
   this.exploded = false;
   this.particles = [];
-  this.type = type;
+  this.trail = [];
+  
+  let dx = tx - sx;
+  let dy = ty - sy;
+  let dist = Math.sqrt(dx * dx + dy * dy);
+  let speed = 6;
+  this.vx = dx / dist * speed;
+  this.vy = dy / dist * speed;
 }
 
 Firework.prototype.update = function() {
   if (!this.exploded) {
-    let dx = this.tx - this.x;
-    let dy = this.ty - this.y;
-    this.x += dx * 0.1;
-    this.y += dy * 0.1;
+    this.trail.push({x: this.x, y: this.y});
+    if (this.trail.length > 8) this.trail.shift();
 
-    if (Math.abs(dx) < 2 && Math.abs(dy) < 2) {
+    this.x += this.vx;
+    this.y += this.vy;
+
+    let distance = Math.hypot(this.tx - this.x, this.ty - this.y);
+    if (distance < 8) {
       this.explode();
     }
   } else {
@@ -74,13 +73,21 @@ Firework.prototype.update = function() {
 Firework.prototype.draw = function() {
   if (!this.exploded) {
     ctx.beginPath();
+    for (let i = 0; i < this.trail.length; i++) {
+      let t = this.trail[i];
+      ctx.lineTo(t.x, t.y);
+    }
+    ctx.strokeStyle = this.color;
+    ctx.stroke();
+
+    ctx.beginPath();
     ctx.arc(this.x, this.y, 3, 0, Math.PI * 2);
     ctx.fillStyle = this.color;
     ctx.fill();
   } else {
     this.particles.forEach(p => p.draw());
     ctx.fillStyle = this.color;
-    ctx.font = "30px Arial";
+    ctx.font = "28px Arial";
     ctx.textAlign = "center";
     ctx.fillText(this.text, this.tx, this.ty);
   }
@@ -88,36 +95,38 @@ Firework.prototype.draw = function() {
 
 Firework.prototype.explode = function() {
   this.exploded = true;
-  playBoomSound(); // phát âm thanh khi nổ
-  let particleCount = 80;
+  let count = 100;
 
-  if (this.type === "circle") {
-    for (let i = 0; i < particleCount; i++) {
-      let angle = (Math.PI * 2 / particleCount) * i;
-      let speed = Math.random() * 3 + 2;
-      this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
+  if (this.type === "classic") {
+    for (let i = 0; i < count; i++) {
+      let angle = Math.random() * Math.PI * 2;
+      let speed = Math.random() * 4 + 2;
+      this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
     }
-  } else if (this.type === "heart") {
-    for (let i = 0; i < particleCount; i++) {
-      let t = i / particleCount * Math.PI * 2;
-      let x = 16 * Math.sin(t) ** 3;
-      let y = -(13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t));
-      let angle = Math.atan2(y, x);
+  }
+  else if (this.type === "heart") {
+    for (let i = 0; i < count; i++) {
+      let t = i / count * Math.PI * 2;
+      let px = 16 * Math.sin(t) ** 3;
+      let py = -(13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t));
+      let angle = Math.atan2(py, px);
       let speed = 2.5;
-      this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
+      this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
     }
-  } else if (this.type === "flower") {
-    for (let i = 0; i < particleCount; i++) {
-      let angle = (Math.PI * 2 / particleCount) * i;
+  }
+  else if (this.type === "flower") {
+    for (let i = 0; i < count; i++) {
+      let angle = (Math.PI * 2 / count) * i;
       let speed = (i % 2 === 0) ? 3 : 1.5;
-      this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
+      this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
     }
-  } else if (this.type === "double") {
+  }
+  else if (this.type === "double") {
     for (let ring = 1; ring <= 2; ring++) {
-      for (let i = 0; i < particleCount / 2; i++) {
-        let angle = (Math.PI * 2 / (particleCount / 2)) * i;
+      for (let i = 0; i < count / 2; i++) {
+        let angle = (Math.PI * 2 / (count / 2)) * i;
         let speed = ring * 2;
-        this.particles.push(new Particle(this.tx, this.ty, angle, speed, this.color));
+        this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
       }
     }
   }
@@ -129,6 +138,7 @@ function Particle(x, y, angle, speed, color) {
   this.vx = Math.cos(angle) * speed;
   this.vy = Math.sin(angle) * speed;
   this.alpha = 1;
+  this.size = Math.random() * 2 + 1;
   this.color = color;
 }
 
@@ -137,14 +147,14 @@ Particle.prototype.update = function() {
   this.y += this.vy;
   this.vx *= 0.98;
   this.vy *= 0.98;
-  this.vy += 0.02;
-  this.alpha -= 0.01;
+  this.vy += 0.03;
+  this.alpha -= 0.015;
 };
 
 Particle.prototype.draw = function() {
   ctx.globalAlpha = this.alpha;
   ctx.beginPath();
-  ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
+  ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
   ctx.fillStyle = this.color;
   ctx.fill();
   ctx.globalAlpha = 1;
@@ -165,13 +175,19 @@ function animate() {
   requestAnimationFrame(animate);
 }
 
+// Bắn nhiều pháo từ dưới lên
 setInterval(() => {
-  let x = Math.random() * canvas.width;
-  let y = Math.random() * (canvas.height / 2);
-  let types = ["circle", "heart", "flower", "double"];
-  let type = types[Math.floor(Math.random() * types.length)];
-  fireworks.push(new Firework(x, y, "❤️ Yêu Em ❤️", type));
-}, 800);
+  for (let i = 0; i < 3; i++) {
+    let startX = Math.random() * canvas.width;
+    let startY = canvas.height;
+    let targetX = Math.random() * canvas.width;
+    let targetY = Math.random() * (canvas.height / 2);
+    let types = ["classic", "heart", "flower", "double"];
+    let type = types[Math.floor(Math.random() * types.length)];
+    let text = texts[Math.floor(Math.random() * texts.length)];
+    fireworks.push(new Firework(startX, startY, targetX, targetY, text, type));
+  }
+}, 600);
 
 animate();
 </script>
