--- a/index.html
+++ b/index.html
@@ -1,195 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Pháo hoa nghệ thuật</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Screaming in fear</title>
+  <link rel="stylesheet" href="./style/style.css">
+</head>
 <style>
-  body {
-    margin: 0;
-    background: black;
-    overflow: hidden;
-  }
-  canvas {
-    display: block;
+  .fog {
+    position: absolute;
+    top: -100px;
+    left: -100px;
+    width: 100%;
+    height: 100%;
+    background: url('./style/Eyes.jpg') repeat;
+    opacity: 0.1;
+    animation: drift 20s linear infinite;
+    pointer-events: none;
+    z-index: 0;
+    filter: blur(1.5px);
   }
 </style>
-</head>
 <body>
-<canvas id="fireworks"></canvas>
-
-<script>
-const canvas = document.getElementById('fireworks');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-let fireworks = [];
-const texts = ["❤️ Yêu Em ❤️", "💖", "I Love You", "Happy Birthday", "🎆", "💞", "🌸"];
-
-function randColor() {
-  return `hsl(${Math.random() * 360},100%,50%)`;
-}
-
-function Firework(sx, sy, tx, ty, text, type) {
-  this.x = sx;
-  this.y = sy;
-  this.tx = tx;
-  this.ty = ty;
-  this.color = randColor();
-  this.text = text;
-  this.type = type;
-  this.exploded = false;
-  this.particles = [];
-  this.trail = [];
+  <div class="fog"></div>
+  <div class="content">Screaming in fear...</div>
   
-  let dx = tx - sx;
-  let dy = ty - sy;
-  let dist = Math.sqrt(dx * dx + dy * dy);
-  let speed = 6;
-  this.vx = dx / dist * speed;
-  this.vy = dy / dist * speed;
-}
+  <div class="candle">
+    <img id="candleImage" src="./style/Candle-On.png" alt="Candle">
+    <button class="btn" onclick="blowCandle()">Thoi Nen Di...</button>
+  </div>
+  <img id="scaryImage" src="./style/hq720.jpg" alt="Scary Fullscreen Image">
+  <audio id="scarySound" src="./style/Scary Woman Screaming - Sound Effect (HD).mp3" preload="auto"></audio>
 
-Firework.prototype.update = function() {
-  if (!this.exploded) {
-    this.trail.push({x: this.x, y: this.y});
-    if (this.trail.length > 8) this.trail.shift();
-
-    this.x += this.vx;
-    this.y += this.vy;
-
-    let distance = Math.hypot(this.tx - this.x, this.ty - this.y);
-    if (distance < 8) {
-      this.explode();
-    }
-  } else {
-    this.particles.forEach((p, i) => {
-      p.update();
-      if (p.alpha <= 0) this.particles.splice(i, 1);
-    });
-  }
-};
-
-Firework.prototype.draw = function() {
-  if (!this.exploded) {
-    ctx.beginPath();
-    for (let i = 0; i < this.trail.length; i++) {
-      let t = this.trail[i];
-      ctx.lineTo(t.x, t.y);
-    }
-    ctx.strokeStyle = this.color;
-    ctx.stroke();
-
-    ctx.beginPath();
-    ctx.arc(this.x, this.y, 3, 0, Math.PI * 2);
-    ctx.fillStyle = this.color;
-    ctx.fill();
-  } else {
-    this.particles.forEach(p => p.draw());
-    ctx.fillStyle = this.color;
-    ctx.font = "28px Arial";
-    ctx.textAlign = "center";
-    ctx.fillText(this.text, this.tx, this.ty);
-  }
-};
-
-Firework.prototype.explode = function() {
-  this.exploded = true;
-  let count = 100;
-
-  if (this.type === "classic") {
-    for (let i = 0; i < count; i++) {
-      let angle = Math.random() * Math.PI * 2;
-      let speed = Math.random() * 4 + 2;
-      this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
-    }
-  }
-  else if (this.type === "heart") {
-    for (let i = 0; i < count; i++) {
-      let t = i / count * Math.PI * 2;
-      let px = 16 * Math.sin(t) ** 3;
-      let py = -(13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t));
-      let angle = Math.atan2(py, px);
-      let speed = 2.5;
-      this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
-    }
-  }
-  else if (this.type === "flower") {
-    for (let i = 0; i < count; i++) {
-      let angle = (Math.PI * 2 / count) * i;
-      let speed = (i % 2 === 0) ? 3 : 1.5;
-      this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
-    }
-  }
-  else if (this.type === "double") {
-    for (let ring = 1; ring <= 2; ring++) {
-      for (let i = 0; i < count / 2; i++) {
-        let angle = (Math.PI * 2 / (count / 2)) * i;
-        let speed = ring * 2;
-        this.particles.push(new Particle(this.x, this.y, angle, speed, this.color));
-      }
-    }
-  }
-};
-
-function Particle(x, y, angle, speed, color) {
-  this.x = x;
-  this.y = y;
-  this.vx = Math.cos(angle) * speed;
-  this.vy = Math.sin(angle) * speed;
-  this.alpha = 1;
-  this.size = Math.random() * 2 + 1;
-  this.color = color;
-}
-
-Particle.prototype.update = function() {
-  this.x += this.vx;
-  this.y += this.vy;
-  this.vx *= 0.98;
-  this.vy *= 0.98;
-  this.vy += 0.03;
-  this.alpha -= 0.015;
-};
-
-Particle.prototype.draw = function() {
-  ctx.globalAlpha = this.alpha;
-  ctx.beginPath();
-  ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-  ctx.fillStyle = this.color;
-  ctx.fill();
-  ctx.globalAlpha = 1;
-};
-
-function animate() {
-  ctx.fillStyle = "rgba(0,0,0,0.2)";
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-  fireworks.forEach((fw, i) => {
-    fw.update();
-    fw.draw();
-    if (fw.exploded && fw.particles.length === 0) {
-      fireworks.splice(i, 1);
-    }
-  });
-
-  requestAnimationFrame(animate);
-}
-
-// Bắn nhiều pháo từ dưới lên
-setInterval(() => {
-  for (let i = 0; i < 3; i++) {
-    let startX = Math.random() * canvas.width;
-    let startY = canvas.height;
-    let targetX = Math.random() * canvas.width;
-    let targetY = Math.random() * (canvas.height / 2);
-    let types = ["classic", "heart", "flower", "double"];
-    let type = types[Math.floor(Math.random() * types.length)];
-    let text = texts[Math.floor(Math.random() * texts.length)];
-    fireworks.push(new Firework(startX, startY, targetX, targetY, text, type));
-  }
-}, 600);
-
-animate();
-</script>
+  <script src="./style/script.js"></script>
 </body>
 </html>
